fixed werid overlap thing on p tags

--- a/gameThree/style.css
+++ b/gameThree/style.css
@@ -141,7 +141,7 @@
         border-radius: 5%;
         color: cadetblue;
         font-size:8vw;
-        /* background-color: cornflowerblue; */
+        background: url(https://i.imgur.com/79vxYQX.png);
         width: 26%;
         margin-left: 8%;
         top: 9%;
